<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:shrinkColumns="*" android:stretchColumns="*">

    <TableRow
        android:layout_width="fill_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleView"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_span="3"
            android:padding="5dp"
            android:text="@string/cuica"
            android:textAppearance="?android:attr/textAppearanceLarge"></TextView>
    </TableRow>
    <TableRow android:layout_width="fill_parent">
        <Button android:id="@+id/nota_button" android:text="@string/nota_1"></Button>
        <Button android:id="@+id/nota1_button" android:text="@string/nota_2"></Button>
    </TableRow>
</TableLayout>
